# druid-material-icons

./: .gitignore  Cargo.toml  test.sh
generate-icons/: Cargo.toml
generate-icons/src/: find.rs  main.rs
src/: icons.rs  icons.rs.in  lib.rs
