[package]
name = "druid-material-icons"
version = "0.1.0"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]
edition = "2018"

[features]
default = ["druid"]

[dependencies]
# We only use a small amount of druid, so take a chance that we will always be compatible.
druid = { version = "*", optional = true }
kurbo = "*"

[workspace]
members = [
    ".",
    "generate-icons"
]
