[package]
name = "generate-icons"
version = "0.1.0"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.9"
once_cell = "1.4.0"
heck = "0.3.1"
roxmltree = "0.11.0"
kurbo = "0.6.1"
qu = "0.3.1"
structopt = "0.3.25"
usvg = "0.20.0"

